580 team abgaben ermöglichen (#443)
* UI Button to enable teamSubmissions

* UI improved & added inputs for min/max Teamsize

* UX improvement

* make it possible to disable teamsubmissions later on

* Teammitglieder auswählbar & refactoring/cleanup

* removed unreachable code & permission bugfixing

* optimization

set homework body only if homework service is used.
if(service=="homework"){
\t old code
}

* moved code to server

* more Data for submission

* removed minCoWorkers (unused)

* ajax error messages

* Number of coWorkers validated with error messages

* remoced console.log() & linter

* moved "hidden" (git change request)

* hint for teachers

* tiny fix (removed >)

* Teamgröße nur anzeigen, wenn gesetzt

* Man selbst ist immer ausgewählt

* prevent duplicate submissions by reloading page after first submission for a user

* list submissions by teams if teamsubmission & bugfixes

* forgot to push this file

* removed console.log()

* inform teacher about students without submissions

* fixed show students without submissions

* removed hint

* fixed bug

studentId was set to teacherId when the teacher graded the submission

* fixed another bug

when teamSubmissions where disabled the teacher wasn't able to see any
submission

* post extra permissions for coWorkers

* push file permissions for co worker after submit

* fix lint error

* fix bug that coWorkers are empty after deleting file

* fix a bug that publicSubmissions blocks file upload

* fixed that students wasn't seeing other students in teamSubmissions when publicSubmissions enabled

missing: teamMembers can't update/edit

* added delete button & some refactoring for bugfixes

* always set coWorkers in Form

* bugfixes

1. Schüler können sich nicht aus Team austragen
2. Teammitglieder können nichts bearbeiten

* coWorker => teamMember

* "CoWorker" => "TeamMember"

* bugfix (disabled selections wasn't co

--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -76,7 +76,10 @@
       background: transparent;
     }
   }
-
+  .groupNames span:not(:last-child):after{
+    display: inline;
+    content:",";
+  }
 }
 
 .section-evaluation {
