--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -8,8 +8,10 @@
                             <i class='fa fa-print'></i> Drucken
                     </div>
                     <h1 class="print-only">{{{this.title}}}</h1>
-                    {{#if this.description}}
-                        <div>Maximale Teamgröße: <b>{{{this.maxTeamMembers}}} Mitglieder</b></div>
+                    {{#if this.teamSubmissions}}
+                        {{#if this.maxTeamMembers}}
+                            <div>Maximale Teamgröße: <b>{{{this.maxTeamMembers}}} Mitglieder</b></div>
+                        {{/if}}
                     {{/if}}
                         <div>{{{this.description}}}</div>
                 {{else}}
