--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -4,6 +4,14 @@
         <link rel="stylesheet" href="/styles/content/content.css"/>
     {{/content}}
 
+    {{#content "styles" mode="append"}}
+        <style type="text/css">
+            .rate-link {
+                color: #b10438;
+            }
+        </style>
+    {{/content}}
+
     {{#content "page"}}
         <section class="store container">
 
