--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -18,7 +18,7 @@
                 <span class="tag tag-default">{{{ this }}}</span>
             {{/each}}
         </div>
-        <p class="card-text">{{{ description }}}</p>
+        <p class="card-text">{{{ truncateLength description 500}}}</p>
         {{#userIsAllowedToViewContent nonOer}}
         {{else}}
             <div class="alert alert-info" role="alert">
