--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -135,3 +135,30 @@
     }
 }
 
+.courseGroup {
+    width: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 10px 0;
+    clear: both;
+    .group-card {
+        width: 100%;
+        position: relative;
+        padding: 10px;
+        text-decoration: none;
+        h5 {
+            margin: 0;
+            color: $colorHPIRed;
+        }
+        a {
+            color: #373a3c;
+        }
+        .card-tags {
+            padding-top: 10px;
+            .tag {
+                font-size: 100%;
+            }
+        }
+    }
+}
+
