--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -22,7 +22,7 @@
                     <option value="{{this._id}}" 
                         {{#if @root.submission}}
                             {{#inArray this._id @root.submission.teamMemberIds}}selected{{/inArray}}
-                            {{#ifeq this._id @root.submission.studentId._id}} selected{{/ifeq}}
+                            {{#ifeq this._id @root.submission.studentId._id}} selected class="owner"{{/ifeq}}
                         {{else}}
                             {{#ifeq this._id @root.currentUser._id}} selected{{/ifeq}}
                         {{/if}}
@@ -44,8 +44,8 @@
         </div>
         <input type="hidden" name="_method" data-force-value="true" value="post"/>
         <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}"/>
-      {{/if}}
         <input name="studentId" type="hidden" data-force-value="true" value="{{currentUser._id}}"/>
+      {{/if}}
         <input name="homeworkId" type="hidden" data-force-value="true" value="{{_id}}"/>
         <div class="form-group">
             <textarea id="evaluation" name="comment" class="form-control customckeditor"
@@ -67,14 +67,14 @@
         {{/userHasPermission}}
 
         {{#if @root.submission}}
-            {{#inArray @root.currentUser._id @root.submission.teamMemberIds}}
+            {{#ifeq @root.currentUser._id @root.submission.studentId._id}}
                 <a href="/homework/submit/{{@root.submission._id}}/delete" class="btn btn-secondary btn-delete-submission" 
                     target="_blank"
                     data-method="delete-submission"
                     data-name="deine Abgabe"
                     alt="Abgabe löschen"
                 ><i class="fa fa-trash-o"></i> Löschen</a>
-            {{/inArray}}
+            {{/ifeq}}
         {{/if}}
     {{/if}}
     </form>
