--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -1,6 +1,10 @@
+@import '../lib/colors.scss';
+
 .section-team {
   .team-container {
-    padding: 0 30px;
+    @media screen and (min-width: 767px) {
+      padding: 0 30px;
+    }
     box-sizing: border-box;
     max-width: 1400px;
     width: 100%;
@@ -14,6 +18,7 @@
     text-align: center;
     position: relative;
     min-height: 350px;
+    width: 100%;
   }
 
   .img-out {
@@ -31,65 +36,6 @@
     margin-bottom: 20px;
     margin-top: 10px;
   }
-
-  .description {
-    margin-top: 50%;
-  }
-
-  /* entire container, keeps perspective */
-  .flip-container {
-    perspective: 1000px;
-  }
-  /* flip the pane when hovered */
-  .flip-container:hover .flipper, .flip-container.hover .flipper {
-    transform: rotateY(180deg);
-  }
-
-  .flip-container, .front, .back {
-    width: 100%;
-    height: 480px;
-    margin-bottom: 20px;
-  }
-
-  /* flip speed goes here */
-  .flipper {
-    transition: 0.6s;
-    transform-style: preserve-3d;
-    padding-right: 5px;
-
-    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
-    border-radius: 10px;
-
-    position: relative;
-  }
-
-  /* hide back of pane during swap */
-  .front, .back {
-    backface-visibility: hidden;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-
-  /* front pane, placed above back */
-  .front {
-    z-index: 2;
-    /* for firefox 31 */
-    transform: rotateY(0deg);
-  }
-
-  /* back, initially hidden pane */
-  .back {
-    transform: rotateY(180deg);
-  }
-
-/* Fancy Modals */
-* {
-  box-sizing:border-box;
-}
 
 html,body {
   min-height:100%;
@@ -139,12 +85,13 @@ div[id^='modal-container-'] {
   }
   .modal-background {
     display:table-cell;
+    width: 100%;
+    height: 100%;
     background:rgba(0,0,0,.8);
     text-align:center;
     vertical-align:middle;
     .modal {
-      background:white;
-      padding:50px;
+      width: 100%;
       display:inline-block;
       border-radius:3px;
       font-weight:300;
@@ -283,7 +230,7 @@ div[id^='modal-container-'] {
        font-size: 2em;
      }
     &-desc {
-      color: rgba(#000, 0.2);
+      color: rgba(#000, 0.4);
       margin-top: 10px;
       text-transform: uppercase;
       font-size: 0.8em;
@@ -332,4 +279,32 @@ div[id^='modal-container-'] {
     transition-duration: 1.5s;
   }
 
+  .modal-dialog {
+    width: 98%;
+    height: 92%;
+    padding: 0;
+    max-width: 1080px !important;
+  }
+
+  .modal-content {
+    @media screen and (min-width: 767px) {
+      padding: 75px 50px 20px 50px;
+    }
+    height: 99%;
+  }
+
+  .modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .container {
+    margin-left: 0;
+  }
+
+  h5 {
+    color: $colorHPIRed;
+    margin-top: 20px;
+  }
 }
