--- a/views/team/team_loggedin.hbs
+++ b/views/team/team_loggedin.hbs
@@ -1,6 +1,7 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/authentication/home.css"/>
         <link rel="stylesheet" href="/styles/team/team.css"/>
     {{/content}}
 
@@ -9,5 +10,6 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
+        <script type="text/javascript" src="/scripts/team.js" defer></script>
     {{/content}}
 {{/extend}}
