--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -50,6 +50,7 @@
                     }).done(function( r ) {
                         let lessonPicker = $('#lessonPicker').empty();
                         if(r.lessons.data.length > 0){
+                            (r.lessons.data||[]).sort((a,b)=>{return (a.name.toUpperCase() < b.name.toUpperCase())?-1:1;});
                             lessonPicker.append('<option value="">Keine Zuordnung</option>');
                             for (var i = 0; i < r.lessons.data.length; i++){
                                 $('#lessonPicker').append('<option value="'+r.lessons.data[i]._id+'">'+r.lessons.data[i].name+'</option>');
