--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -66,6 +66,25 @@
                     </a>
                 {{/if}}
             {{/each}}
+        {{else}}
+            {{#inArray ../this.currentUser._id ../this.courseId.substitutionIds}}
+                {{#each ../this.actions}}
+                    {{#if this.method}}
+                        <a class="btn btn-secondary btn-sm {{this.class}}"
+                           href="{{this.link}}"
+                           target="_blank"
+                           data-method="{{this.method}}"
+                           data-name="{{../../name}}"
+                           alt="{{this.alt}} der Aufgabe: '{{../../name}}'.">
+                            <i class="fa fa-{{this.icon}}"></i>
+                        </a>
+                    {{else}}
+                        <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../../name}}' {{this.alt}}.">
+                            <i class="fa fa-{{this.icon}}"></i> {{this.label}}
+                        </a>
+                    {{/if}}
+                {{/each}}
+            {{/inArray}}
         {{/ifvalue}}
     {{/userHasPermission}}
     {{#inArray this.currentUser._id this.archived}}
