--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -32,6 +32,21 @@
                 Löschen
             </a>
         {{/userHasPermission}}
+        {{else}}
+            {{#inArray currentUser._id courseId.substitutionIds}}
+            {{#userHasPermission "HOMEWORK_CREATE"}}
+                <a class="btn btn-primary btn-edit" href="/homework/{{../_id}}/edit" alt="Aufgabe '{{../title}}' bearbeiten.">Bearbeiten</a>
+                <a class="btn btn-secondary btn-delete"
+                   href="/homework/{{../_id}}"
+                   redirect="/homework"
+                   target="_blank"
+                   data-method="delete-material"
+                   data-name="{{../title}}"
+                   alt="Löschen der Aufgabe: '{{../title}}'.">
+                    Löschen
+                </a>
+            {{/userHasPermission}}
+            {{/inArray}}
         {{/ifvalue}}
         
         {{#inArray this.currentUser._id this.archived}}
