Added cancel buttons to course, homework, and news and maid naming consistent
Added a modal (modal-cancel.hbs) to reduce redundancy. And added the script to loggedin.js so it don't have to be in course.js, homework.js, news.js and later others.
Changed the naming from "Schließen" or "Abbrechen" to "Abbrechen"

--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -186,7 +186,7 @@
 
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary btn-close" onclick="window.history.back();">
+                        <button class="btn btn-add btn-secondary btn-cancel">
                             {{closeLabel}}
                         </button>
 
@@ -195,6 +195,11 @@
                         </button>
                     </div>
                 </form>
+
+                {{#embed "lib/components/modal-cancel" class="cancel-modal"}}
+
+                {{/embed}}
+
             </div>
         </div>
     {{/content}}
