--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -52,7 +52,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary btn-close" onclick="window.history.back();">
+                <button class="btn btn-add btn-secondary btn-cancel">
                     {{closeLabel}}
                 </button>
 
@@ -61,5 +61,10 @@
                 </button>
             </div>
         </form>
+
+        {{#embed "lib/components/modal-cancel" class="cancel-modal"}}
+
+        {{/embed}}
+
     {{/content}}
 {{/extend}}
