--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -8,12 +8,10 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
         <script src="/scripts/moment/moment.js" type="text/javascript" defer></script>
+        <script src="/scripts/courses.js" type="text/javascript" defer></script>
         <script src="/scripts/coursesTimes.js" type="text/javascript" defer></script>
     {{/content}}
 
-    {{#content "scripts" mode="append"}}
-        <script src="/scripts/courses.js" type="text/javascript"></script>
-    {{/content}}
 
     {{#content "page"}}
         <section class="section-course">
@@ -184,11 +182,25 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="{{submitLabel}}"/>
+
+                <div class="modal-footer">
+                    <button class="btn btn-add btn-secondary btn-cancel">
+                        {{closeLabel}}
+                    </button>
+
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        {{submitLabel}}
+                    </button>
                 </div>
 
             </form>
+
+
+                {{#embed "lib/components/modal-cancel" class="cancel-modal"}}
+
+                {{/embed}}
+
+
         </section>
     {{/content}}
 {{/extend}}
