--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -43,7 +43,8 @@
                     </li>
                     {{#each sidebarItems}}
                         <li>
-                            <a class="{{this.class}}" href="{{this.link}}">
+                            <a class="{{this.class}}" href="{{this.link}}"
+                                data-container=".nav-sidebar" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
                                 <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                 <span class="link-name">{{this.name}}</span>
                             </a>
@@ -53,7 +54,8 @@
                                     <ul class="subitems">
                                         {{#each this.children}}
                                             <li>
-                                                <a class="subitem {{this.class}}" href="{{this.link}}">
+                                                <a class="subitem {{this.class}}" href="{{this.link}}"
+                                                    data-container=".nav-sidebar" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
                                                     <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                                     <span class="link-name">{{this.name}}</span>
                                                 </a>
