--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -10,11 +10,9 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
+                                        <br />
                                     </div>
-                                    <div class="modal-body">
+                                    <div class="modal-body" {{#if longDesc}}style="padding-top: {{longDesc}}"{{/if}}>
                                         <div class="row">
                                             <div class="col-md-3">
                                                 <div class="image-shadow js-tilt-container" style="background-image: url({{pictureUrl}});">
@@ -24,7 +22,7 @@
                                             <div class="col-md-7">
                                                 <h2 class="person-title" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
                                                 <h5 class="person-desc" style="text-align: left">{{position}}</h5>
-                                                <p style="text-align: left">{{description}}</p>
+                                                <p style="text-align: left">{{{description}}}</p>
                                             </div>
                                         </div>
                                     </div>
