--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-block">
-                    <div class="section-title"><h4>Team</h4></div>
+                    <div class="section-title"><h4>{{title}}</h4></div>
                     {{#embed "team/team"}}{{/embed}}
                 </div>
             </div>
