--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="/impressum" target="blank">Impressum</a></li>
                     <li><a href="/impressum#data_security">Datenschutzerklärung</a></li>
+                    <li><a href="/team">Team</a></li>
                     <li><a href="/partner">Partner</a></li>
                     <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
                 </ul>
