--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -12,6 +12,8 @@
                 <span> - </span>
                 <a href="mailto:hpi-info@hpi.de?subject=Schul_Cloud%20Anfrage">Kontakt</a>
                 <span> - </span>
+                <a href="/team">Team</a>
+                <span> - </span>
                 <a href="/partner">Partner</a>
             </nobr>
         </div>
