add css, missing texts and pics

--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -5,6 +5,9 @@
                 <div class="cloud-logo"></div>Schul-Cloud</a>
             <ul class="nav navbar-nav pull-right">
                 <li class="nav-item hidden-sm-down">
+                    <a class="nav-link" href="/team">Team</a>
+                </li>
+                <li class="nav-item hidden-sm-down">
                     <a class="nav-link" href="/partner">Partner</a>
                 </li>
                 <li class="nav-item">
