show number of total resources and resources found

--- a/views/content/forms/form-search.hbs
+++ b/views/content/forms/form-search.hbs
@@ -5,7 +5,7 @@
                    name="q"
                    type="text"
                    class="form-control search-field"
-                   placeholder="Suche nach..."/>
+                   placeholder="Suche in {{ totalCount }} Materialien... "/>
         </div>
     </div>
 </form>
