--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -32,6 +32,7 @@
     {{/content}}
 
     {{#content "body"}}
+        <div class="navtooltips"></div>
         <aside class="nav-sidebar hide-inline">
             <nav>
                 <ul class="sidebar-list">
@@ -44,7 +45,7 @@
                     {{#each sidebarItems}}
                         <li>
                             <a class="{{this.class}}" href="{{this.link}}"
-                                data-container=".nav-sidebar" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
+                                data-container=".navtooltips" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
                                 <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                 <span class="link-name">{{this.name}}</span>
                             </a>
@@ -55,7 +56,7 @@
                                         {{#each this.children}}
                                             <li>
                                                 <a class="subitem {{this.class}}" href="{{this.link}}"
-                                                    data-container=".nav-sidebar" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
+                                                    data-container=".navtooltips" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
                                                     <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
                                                     <span class="link-name">{{this.name}}</span>
                                                 </a>
