--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -33,7 +33,10 @@
                     <label>Inhalte</label>
 
                     <!-- React Magic -->
-                    <div id="content-blocks" data-value="{{lesson.contents}}" data-etherpadbaseurl="{{etherpadBaseUrl}}"></div>
+                    <div id="content-blocks"
+                         data-value="{{lesson.contents}}"
+                         data-etherpadbaseurl="{{etherpadBaseUrl}}"
+                         data-arsnovaclickbaseurl="{{arsnovaClickBaseUrl}}"></div>
                 </div>
 
                 <div class="modal-footer">
