fix bug that opens empty page on click on drag button in courses

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -67,8 +67,7 @@
                                                             redirect="/courses/{{../courseId}}">
                                                             <i class="fa fa-trash-o"></i>
                                                         </a>
-                                                        <a class="btn btn-secondary btn-sm move-handle"
-                                                            href="{{../_id}}">
+                                                        <a class="btn btn-secondary btn-sm move-handle">
                                                              <i class="fa fa-arrows"></i>
                                                         </a>
                                                     </div>
@@ -100,8 +99,7 @@
                                                             redirect="/courses/{{../courseId}}">
                                                             <i class="fa fa-trash-o"></i>
                                                         </a>
-                                                        <a class="btn btn-secondary btn-sm move-handle"
-                                                            href="{{../_id}}">
+                                                        <a class="btn btn-secondary btn-sm move-handle">
                                                              <i class="fa fa-arrows"></i>
                                                         </a>
                                                     </div>
