--- a/views/topic/components/content-resources.hbs
+++ b/views/topic/components/content-resources.hbs
@@ -6,7 +6,9 @@
         <div class="card">
             <div class="card-block">
                 <h4 class="card-title">
-                    <a href="{{url}}" target="_blank">
+                    <a class="external-link" href="#!"
+                        data-external-link="{{url}}"
+                        data-provider="{{client}}">
                         {{title}}
                     </a>
                 </h4>
