--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -34,7 +34,7 @@
     <a class="content" href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'"> 
         <h5 class="title">
             {{#if this.courseId}}
-                [<span>{{this.courseId.name}}</span>] -
+                [<span>{{this.courseId.name}}</span>{{#if this.isSubstitution}} <sub>Vertretung</sub>{{/if}}] -
             {{/if}}
             {{this.name}}
         </h5>
@@ -49,7 +49,7 @@
     <div class="action-group">
     {{#userHasPermission "HOMEWORK_CREATE"}}
         {{! Maybe Teachers create Tasks for other Teachers -> prevent editing by them }}
-        {{#ifvalue ../this.teacherId value=../this.currentUser._id}}
+        {{#if ../this.isTeacher}}
             {{#each ../this.actions}}
                 {{#if this.method}}
                     <a class="btn btn-secondary btn-sm {{this.class}}"
@@ -66,26 +66,7 @@
                     </a>
                 {{/if}}
             {{/each}}
-        {{else}}
-            {{#inArray ../this.currentUser._id ../this.courseId.substitutionIds}}
-                {{#each ../this.actions}}
-                    {{#if this.method}}
-                        <a class="btn btn-secondary btn-sm {{this.class}}"
-                           href="{{this.link}}"
-                           target="_blank"
-                           data-method="{{this.method}}"
-                           data-name="{{../../name}}"
-                           alt="{{this.alt}} der Aufgabe: '{{../../name}}'.">
-                            <i class="fa fa-{{this.icon}}"></i>
-                        </a>
-                    {{else}}
-                        <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../../name}}' {{this.alt}}.">
-                            <i class="fa fa-{{this.icon}}"></i> {{this.label}}
-                        </a>
-                    {{/if}}
-                {{/each}}
-            {{/inArray}}
-        {{/ifvalue}}
+        {{/if}}
     {{/userHasPermission}}
     {{#inArray this.currentUser._id this.archived}}
         {{#userHasPermission "HOMEWORK_CREATE"}}
