--- a/static/styles/content/content.scss
+++ b/static/styles/content/content.scss
@@ -95,3 +95,9 @@ h1, h3 {
   right: 18px;
   color: lightgrey;
 }
+
+.star-raiting {
+}
+.fa-star-half-o,.fa-star,.fa-star-o {
+  color: $colorHPIRed
+}
