--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -53,6 +53,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/content.js" type="text/javascript" defer></script>
+        <script src="/scripts/rating.js" type="text/javascript" defer></script>
     {{/content}}
 
 {{/extend}}
